--- a/LAB5.Rmd
+++ b/LAB5.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Lab 5: Intro to stochastic models (short lab!)"
+title: "Lab 5: Intro to stochastic models"
 author: "NRES 470/670"
 date: "Feb 15, 2017"
 output: 
@@ -13,31 +13,28 @@ output:
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
-In this lab we will continue to add complexity (and biological realism) to our population models in InsightMaker. Among the concepts we will play around with are *parameter uncertainty*, *demographic stochasticity* and *environmental stochasticity*.
 
+Now we are going to shift focus from age-structured population models for now! 
 
-## Exercise: dealing with uncertainty and stochasticity
+In this lab we will continue to add complexity (and biological realism) to our population models in InsightMaker. Among the concepts we will play around with are *parameter uncertainty*, *demographic stochasticity* and *environmental stochasticity*. we have already covered this topic at length in lecture, but I wanted you to have a chance to start playing around with these concepts in greater depth. 
 
-Now we are going to shift focus from age-structured population models to **stochasticity** and **uncertainty**. We haven't gotten to this in lecture yet, but I wanted you to have a chance to start playing around with these concepts in lab. 
-
-We will go into more detail in lecture, but here are the concepts we need for this lab:
+Here are the concepts we need for this lab (review!):
 
 1. What if we don't have enough data to specify our model (always the case!)? Another way of saying this is that we *lack sufficient knowledge* to parameterize our model. We can characterize this type of uncertainty as a **confidence interval** or simply upper and lower bounds. Some ways this uncertainty could be represented include:
 
-$b = [1.1,1.9]$    --or--
+$b = [1.1,1.9]$   --or--
 
 $b = 1.5 \pm 0.4$
 
-The tool we use to deal with this type of uncertainty is called **uncertainty analysis**, or **sensitivity analysis**. Basically, we run the model for the extreme possible values (lower and upper bounds) and see what happens to our study system (e.g., does the population go extinct? decline?). 
+The tool we use to deal with this type of uncertainty is called **uncertainty analysis** (also known as *sensitivity analysis*). Basically, we run the model for the extreme possible values (lower and upper bounds) and see what happens to our study system (e.g., does the population go extinct? decline?). 
 
-2. Second, we usually can't predict whether an individual will live or die, breed or not breed (whether an _individual_ will "get lucky" so to speak!)? We might know the per-capita *probability* of breeding, or the *probability* of dying, or the per-capita *rate* of offspring production, or the probability of a given offspring being female. But when it comes to projecting exactly who lives and dies, who gives birth and who doesn't, how many females are born, we _just can't know for sure_. In population ecology this type of uncertainty is called **demographic stochasticity**. In this case, the way we deal with this is we make the birth and death process **stochastic** (that is, we use a random-number generator!).
+2. Second, we usually can't predict whether an individual will live or die, breed or not breed, have females or males, have twins or triplets. In other words, we can't predict whether an _individual_ will "get lucky" or "get unlucky"! We might know (with absolute certainty!) the per-capita *probability* of breeding, or the *probability* of dying, or the per-capita *rate* of offspring production, or the probability of a given offspring being female. But when it comes to projecting exactly who lives and dies, who gives birth and who doesn't, how many females are born, we _just can't know for sure_. In population ecology this type of uncertainty is called **demographic stochasticity**. In this case, the way we deal with this is we make the total number of births and deaths **stochastic** (that is, we use a random-number generator!).
 
 For the number of births in a population, we usually use a **Poisson distribution**. The Poisson random number generator only produces whole numbers (we don't like fractional individuals anyway) and doesn't produce negative numbers. This makes it a good way to model births. 
 
-$Births = Poisson(b*N_t)      \qquad \text{(Eq. 5)}$
+$Births = Poisson(b*N_t)      \qquad \text{(Eq. 1)}$
 
-
-For example, let's imagine population size is 100 and the birth rate is 0.8. Here is the *distribution* of Births:
+For example, let's imagine population size is 100 and the birth rate is 0.8. Here is the *distribution* of Births (total number of births in the population):
 
 ```{r}
 hist(rpois(10000,(100*0.8)),main="",xlab="Births")
@@ -46,15 +43,18 @@ hist(rpois(10000,(100*0.8)),main="",xlab="Births")
 
 Deaths are usually modeled using a **Binomial distribution**. The Binomial random number generator only produced whole numbers (which we like) and can only produce numbers that are greater than 0 and less than the total population size. These properties make it good for esimating mortalities!
 
-$Deaths = Binomial(size=N_t,prob=d)     \qquad \text{(Eq. 6)}$
+$Deaths = Binomial(size=N_t,prob=d)     \qquad \text{(Eq. 2)}$
 
-Let's imagine population size is 100 and death rate is 0.2. Here is the distribution of deaths:
+Let's imagine population size is 100 and death rate is 0.2. Here is the *distribution* of possible values for the total deaths in this population:
 
 ```{r}
 hist(rbinom(10000,100,0.2),main="",xlab="Deaths")
 ```
 
-3. Third, we usually can't predict whether next year or the year after will be a good one or a bad one- that is, whether the **vital rates** will be more or less optimal year-to-year (whether a _population_ will "get lucky", so to speak). In population ecology this is called **environmental stochasticity**. In this case, we make the vital rates **stochastic** (i.e., using a random number generator).
+
+3. Third, we usually can't predict whether next year or the year after will be a good one or a bad one- that is, whether the **vital rates** will be more or less optimal year-to-year (whether a _population_ will "get lucky", so to speak). In population ecology this is called **environmental stochasticity**. The term **catastrophe** is reserved for stochastic environmental events that cause major population crashes or extinction. The term **bonanza** is sometimes used to describe stochastic environmental events that cause rapid population growth!  
+
+To model environmental stochasticity, _we make the vital rates **stochastic** _ (i.e., using a random number generator).
 
 For this type of variability, we often use a **Normal distribution** or a **uniform distribution**. These random number generators are not constrained to be whole integers, nor are they constrained to be positive. 
 
@@ -72,23 +72,26 @@ Or what if our mean birth rate is 1.1, with a standard deviation of 0.4:
 hist(rnorm(10000,1.1,0.4),main="",xlab="Per-capita birth rate")
 ```
 
-In general, we use a normal distribution if we want our random numbers to have a *central tendency* (humped, or normal distribution) or if we want all possibilities to be equally probable (uniform distribution).
+In general, we use a normal distribution if we want our random numbers to have a *central tendency* (humped or peaked distribution) or if we want all possibilities to be equally probable (uniform distribution).
 
+Okay now let's get to the actual lab activity!
 
-Now let's get to the actual lab activity!
+## Exercise 1: Uncertainty!   
 
 Start with a basic exponentially growing population that looks something like this:
 
 
 ![](IM10.jpg)
 
-Set *Birth rate* equal to 0.4 and *Death rate* equal to 0.3. Set initial abundance at 10. Under the "Settings" menu set the model to run for 10 years. Make sure your *Population* stock can not go negative (this is a setting in the configurations panel). Hit "Simulate"- you should see exponential growth! 
+This should look familiar!
 
-What if we have imperfect knowledge about birth rate. The data we have are consistent with a birth rate $b$ as low as 0.2 and as high as 0.5. Run the model with the lowest and the highest possible birth rate. Now use the "Compare Results" tool (under the "Tools" menu in the upper right corner...) to visualize the range of possible population growth trajectories that would be possible given our *uncertainty* about birth rate.   
+Set *Birth rate* equal to 0.4 and *Death rate* equal to 0.3 (just like we did in class). *Set initial abundance to 10*. Under the "Settings" menu set the model to run for 10 years. Make sure your *Population* stock can not go negative (this is a setting in the configurations panel). Hit "Simulate"- you should see *exponential growth*! 
 
-4a. Provide the plot you just made in your write-up. What is the range of possible final abundances after 10 years? Can we conclude that the population growth rate is positive in this population?
+What if we have imperfect knowledge about birth rate? The data we have are consistent with a birth rate $b$ as low as 0.2 and as high as 0.5. Run the model with the lowest and the highest possible birth rate. Now use the "Compare Results" tool (under the "Tools" menu in the upper right corner...) to visualize the range of possible population growth trajectories that would be possible given our *uncertainty* about the per-capita birth rate.   
 
-4b. Another way to do *uncertainty analysis* is to use a *uniform distribution* to represent the range of uncertainty about the parameter value -- in this case, we define Birth rate as a uniform random variable with minimum of 0.2 and maximum of 0.5. We can do this in InsightMaker in one of two ways. One is to define birth rate like this:
+1a. Provide the plot you just made in your write-up. What is the range of possible final abundances after 10 years? Can we conclude that the population growth rate is positive in this population?    
+
+1b. Another way to do *uncertainty analysis* is to use a *uniform distribution* to represent the range of uncertainty about the parameter value -- in this case, we define Birth rate as a **uniformly distributed** random variable with minimum of 0.2 and maximum of 0.5. We can do this in InsightMaker in one of two ways. One is to define birth rate like this:
 
 ```
 Rand(0.2, 0.5)
@@ -99,88 +102,130 @@ and the other is to define birth rate like this:
 ```
 Fix(Rand(0.2, 0.5))
 ```
+The next three questions relate to comparing these two methods: 
 
-The next three questions relate to comparing these two methods. 
+1c. Try both of these methods a few times. What difference(s) do you notice between these two methods? Explain your answer.
 
+1d. Use the "Sensitivity Testing" tool (in the "Tools" menu, upper right corner) to run the model 50 times using each of the two methods described above. Choose [Population] as the "Monitored Primitive" (otherwise use the default settings). Run the sensitivity testing module (using the "Run Analysis" button) and provide these two resulting plots as part of your write-up (one plot for each of the two methods). Look at the range of final abundances in the two plots. Which method results in the greatest uncertainty about the final abundance (after 10 years)? Can you explain this difference? (this last part is challenging, but give it a try!).  
 
-4c. Try both of these methods. What is the difference between these two methods? Explain your answer.
-
-4d. Use the "Sensitivity Testing" tool (in the "Tools" menu, upper right corner) to run the model 50 times using each of the two methods described above. Choose [Population] as the "Monitored Primitive" (otherwise use the default settings). Run the sensitivity testing module (using the "Run Analysis" button) and provide these two resulting plots as part of your write-up (one plot for each of the two methods). Look at the range of final abundances in the two plots. Which method results in the most uncertainty about the final abundance (after 10 years)? Can you explain this difference? (this last part is challenging, but give it a try!).  
-
-4e. Let's think through the problem one more time- we are uncertain about the *true* value of the per-capita birth rate, , $b$, for a rare species. The birth rate could be anything from 0.2 to 0.5 - we really can't say! Given this uncertainty, we want to know what the abundance will be after 10 years. If you were tasked with evaluating this question hich of the two plots you generated in 4d. would you 
+1e. Let's think through the problem one more time- we are uncertain about the *true* value of the per-capita birth rate, , $b$, for a rare species. The birth rate could be anything from 0.2 to 0.5 - we really can't say! Given this uncertainty, we want to know _what the abundance will be after 10 years_. If you were tasked with evaluating this question, which of the two plots you generated in (1d) would be most appropriate for answering this question? Why? 
 
 
-#### _Demographic Stochasticity_  
+## Exercise 2: Demographic and Environmental Stochasticity  
 
-1. Set *Birth rate* back to 0.4. Hit "Simulate"- make sure you still see exponential growth!   
-2. We will use a *Binomial distribution* to represent the number of mortalities. That is, we flip a coin the same number of times as there are individuals in the population. If the coin comes up heads, then the individual dies. In this case we are using a biased coin- it only comes up heads 30% of the time! The *Binomial distribution* essentially represents the number of times heads came up. To do this in InsightMaker, use the following formula for the *Deaths* flow:
+#### _Demographic Stochasticity_ 
+
+Set *Birth rate* in your model back to 0.4. Make sure initial abundance is set at 10 individuals. Hit "Simulate"- make sure you still see exponential growth!     
+
+We will use a *Binomial distribution* to represent the total number of mortalities in the population. That is, we flip a coin the same number of times as there are individuals in the population. If the coin comes up heads, then the individual dies. In this case we are using a biased coin- it only comes up heads 30% of the time! The *Binomial distribution* essentially represents the number of times heads came up. To do this in InsightMaker, use the following formula for the *Deaths* flow:
 
 ```
 RandBinomial([Population], [Death rate])
 ```
+In plain English: the number of deaths is equal to the number of "coin flips" that come out heads if the probability of getting heads is equal to [Death rate]. 
 
-In plain english: the number of deaths is equal to the number of "coin flips" that come out heads if the probability of getting heads is equal to [Death rate]. 
-
-
-For the birth rate, we will use the *Poisson* distribution. The Poisson distribution is often use to represent births, because there could feasibly be more births than there are individuals currently in the population (e.g., if all individuals have two offspring!). However, the maximum number of "heads" is the total number of individuals. To do this in InsightMaker, use the following formula for the *Births* flow:
+For the total number of births, we will use the *Poisson* distribution. The Poisson distribution is often use to represent births, because there could feasibly be more births than there are individuals currently in the population (e.g., if all individuals have two offspring!). However, the maximum number of "heads" is the total number of individuals. To do this in InsightMaker, use the following formula for the *Births* flow:
 
 ```
 RandPoisson([Population]*[Birth rate])
 ```
-In plain english: the number of births is a Poisson-distributed random number with mean equal to [Population]*[Birth rate].
+In plain English: the number of births is a Poisson-distributed random number with mean equal to [Population]*[Birth rate].
 
-3. Run the simulation. What does it look like?
-4. Use the "Sensitivity Testing" tool (in the "Tools" menu, upper right corner) to run the model 50 times. Choose [Population] as the "Monitored Primitive".
-5. Change the initial abundance to 500 and re-run the "Sensitivity Testing" tool.
+2a. Provide a link to your InsightMaker model with demographic stochasticity, with settings changed to _run for 50 years_. 
 
-**Q** Is the effect of demographic stochasticity bigger at low or high abundances?
+2b. Use the "Sensitivity Testing" tool (in the "Tools" menu, upper right corner) to run the model 50 times for 50 years with a starting abundance of 10 individuals. Choose [Population] as the "Monitored Primitive". Provide the resulting plot in your write-up. Change the initial abundance to 500 and re-run the "Sensitivity Testing" tool. Provide the resulting plot in your write-up. (note: you need both sensitivity analysis plots to fully answer the question!)
+
+2c. Use the plots from (2b) above to evaluate the following question (*and you should ALL get this one right!*): For which of the following is _demographic stochasticity_ a more important driver of population dynamics and extinction risk: higher initial abundance or lower initial abundance? Explain your answer.
 
 #### _Environmental Stochasticity_  
 
-1. Set *Births* back to what it was before ([Population]*[Birth rate]), and do the same for *Deaths*.
-2. We will use a *Normal distribution* to represent how the birth rate changes each year. This could represent climatic variablity -- "good years" and "bad years". The *Normal distribution* is commonly used for this type of variability- it is characterized by an average value (**mean**) and a variability measure (**standard deviation**). To do this in InsightMaker, use the following formula for the *Birth Rate* variable:
+Set *Births* back to what it was before ([Population]*[Birth rate]), and do the same for *Deaths*. Set initial abundance back to 10.    
+
+We will use a *Normal distribution* to represent how the birth rate changes each year. This could represent climatic variablity -- "good years" and "bad years". The *Normal distribution* is commonly used for this type of variability- it is characterized by an average value (**mean**) and a measure of variability or spread (**standard deviation**). To do this in InsightMaker, you can use the following formula for the *Birth Rate* variable:
 
 ```
 RandNormal(0.4, 0.4)
 ```
 
-Similarly, use the following formula for the *Birth Rate* variable:
+Similarly, you can use the following formula for the *Death Rate* variable:
 
 ```
 RandNormal(0.3, 0.3)
 ```
 
-3. Use the "Sensitivity Testing" tool (in the "Tools" menu, upper right corner) to run the model 50 times. Choose [Population] as the "Monitored Primitive".
+2d. Follow the instructions from lecture to ensure that birth rate does not ever go below 0, and that death rate stays between 0 and 1. Embed the link to your InsightMaker model in your write-up. 
 
-5. Change the initial abundance to 500 and re-run the "Sensitivity Testing" tool.
+2e. Use the "Sensitivity Testing" tool (in the "Tools" menu, upper right corner) to run the model 50 times. Provide the resulting plot in your write-up. Choose [Population] as the "Monitored Primitive". Change the initial abundance to 500 and re-run the "Sensitivity Testing" tool. Provide the resulting plot in your write-up. (note: you need both sensitivity analysis plots to fully answer the question!)
 
-**Q** Is the effect of environmental stochasticity bigger at low or high abundances?
+2f. Use the plots from (2e) above to evaluate the following question (*and you should ALL get this one right!*): For which of the following is _environmental stochasticity_ a more important driver of population dynamics and extinction risk: higher initial abundance or lower initial abundance? Explain your answer. 
+
+## Exercise 3: Minimum Viable Population
+
+The aruba island rattlesnake, or Cascabel (*Crotalus durissus unicolor*), is the top predator on the island of Aruba, and primarily consumes rodents. 
+
+![](aruba_rattlesnake1.jpg)
+
+The Aruba island rattlenake, as you might expect, occurs only on the island of Aruba.
+
+![](aruba1.png)
+
+The Aruba rattlesnake is listed as *Critically Endangered* by IUCN, and has several attributes that make it particularly susceptible to falling into the **extinction vortex**:
+
+- Range is limited to the small island of Aruba   
+- Total abundance is estimated as 250 individuals   
+- Population has been declining due to:   
+    - loss and degradation of habitat (overgrazing, human encroachment, forest clearing)    
+    - human persecution     
+
+Consider the following scenario: you are tasked with determining the minimum viable population size (MVP) for the Aruba Island rattlesnake. We define the *minimum viable population* (MVP) as:   
+
+> That abundance below which the probability of extinction is 5% or greater over the next 50 years.
+
+Here are the key model parameters! (note that much of this is simplified and/or made up entirely!)
+
+- The starting abundance is 250 individuals.
+- No age/stage structure!
+- Mean birth rate $b$ is 0.70 (per-capita birth rate)
+- Mean death rate $d$ is 0.69 (per-capita death rate)
+- Density dependence:   
+    - Carrying capacity is 500 individuals.
+    - Above carrying capacity, per-capita birth rate drops to 0.35
+- Environmental stochasticity:   
+    - birth rate is approximately normally distributed with standard deviation of 0.15
+    - death rate does not change year to year.
+- Demographic stochasticity:   
+    - total births are Poisson-distributed
+    - total deaths are Binomially distributed
+
+3a. Set up an InsightMaker model to represent the above scenario. Embed a link to your InsightMaker model in your write-up.    
+
+3b. Is the current population **viable**, under the criteria listed above? That is, is there a less than 5% risk of extinction over a 50-year time frame?
+    **Hint**: use the *Sensitivity Testing* tool to run 500 replicates. Visualize the 95% quantile. For a viable population the 95% quantile should stay above 0 (extinction) up to at least year 50 of the simulation.    
+    
+3c. Find the **minimum viable population (MVP)**. (Note: refer to the "small population paradigm" lecture for more detail on the concept of Minimum Viable Population). Explain your reasoning, and provide plot(s) to back up your answer.  
+
+*Congratulations, you have run your first PVA model!!*
+
+3d. (thought question) The Aruba island rattlesnake is limited to the small island of Aruba. This fact alone is one of the main reasons this species is listed as *Critically Endangered* under the IUCN Red List (the major global ranking of conservation status). Explain why small range size might generally be associated with high extinction risk. 
 
 
-
-
-
-1c) relative role of demographic and environmental stochasticity as populations get bigger
-1d) effects of different stochastic probability distributions. 
-
-
-
-
-
-##Checklist for Lab 4 completion
+##Checklist for Lab 5 completion
 
 * Please bundle all your responses into a single Word document and submit _using WebCampus_!
 
-* URLs for your InsightMaker models should be pasted in your lab submission (MS Word document). See details below...  
+* Where appropriate, URLs for your InsightMaker models should be pasted in your lab submission (MS Word document). See details below...  
 
     * After you save the model you should see a link on the top left-hand corner, "Insight Access". Click on that link, and a new window will pop up. Under "allow update access", add a username (i.e., kevintshoemaker or waldenTA). click on the "Add User" button, and then click on "Submit". Finally, copy and paste the URL into the Word document.
 
-***Due Feb. 24 at 11 am.***
+***Due Mar. 10 at 11 am.***
 
-*  Word document with short answers
+*  Word document with short answers, model URLs, and figures (where appropriate)
     +  **Exercise 1**
         -  *Short answer (1a.)*   
         -  *Short answer (1b.)*   
+        -  *Short answer (1e.)*
+        -  *Short answer (1d.)*
+        -  *Short answer (1e.)*
  
     +  **Exercise 2**
         -  *Short answer (2a.)*
@@ -196,9 +241,7 @@ RandNormal(0.3, 0.3)
         -  *Short answer (3c.)*
         -  *Short answer (3d.)*
         
-    +  **Exercise 4**
-        -  *Short answer (4a.)*
-        -  *Short answer (4b.)*
+
 
 
 
