--- a/index.Rmd
+++ b/index.Rmd
@@ -113,6 +113,7 @@ rmarkdown::render('LAB1.Rmd', 'word_document')
 rmarkdown::render('LAB2.Rmd', 'word_document')
 rmarkdown::render('LAB3.Rmd', 'word_document')
 rmarkdown::render('LAB4.Rmd', 'word_document')
+rmarkdown::render('LAB5.Rmd', 'word_document')
 
 
 ## [Quiz #1](https://unr.instructure.com/courses/15896/quizzes/21572)
